Tested mthD for $.post
Requires upgrade (CartoDB)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   		<a href="" id="link" download="code.js">Download Code</a>	
 	</form>
 	
-	<form name="checkform" id="visibleform" onsubmit="main()">
+	<form name="checkform" id="visibleform" onsubmit="main()" style="display: none">
 		<input type="button" value="Button" id="geolocate" class="notbutton" data-mini="true" data-inline="true"></input>
   		<div class="ui-field-contain" data-type="vertical">
     		<legend>Administrator</legend>
