Separate geolocate function

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	
 <top>	
 	<why>
+		<a href="#" id="geolocate"></a>
 		<searchbox>
 			<buttonbox>
 				<btn style="width: 17.8%"><a href="#" id="all" class="button all"><h4>ALL</h4></a></btn>
@@ -539,7 +540,7 @@
 					</fieldset>
 				</div>
 		  		<input type="submit" id="submit2" value="Update Database" style="pointer-events: auto">
-				<input type="button" value="Add Map Feature" id="geolocate" class="notbutton" data-mini="true" data-inline="true"></input>
+				<input type="button" value="Add Map Feature" id="addmap" class="notbutton" data-mini="true" data-inline="true"></input>
 				<h6 style="color: #555">If you are adding a new map feature, none of the fields are required, but you will be prompted for your lat/lon location.</h6><h4 style="color: #333"> If you are updating an existing entry, please be sure to include hours of operation and selected services at the location you are updating. <b>Empty values will overwrite existing database content.</b><br>Feature edits require prior map refresh.</h4>
 		    </form>
 		  	
